# SpicyCrab

./: Cargo.toml  README.md
src/: main.rs  mata_infos.rs
