[package]
name = "spicy_crab"
version = "0.1.0"
authors = ["Lyzh <enterindex@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = "0.11.1"
tokio = { version = "0.2", features = ["full"] }
httparse = "1.3.4"
#async-std = "1.6.2"
